--- a/templates/tpl.html
+++ b/templates/tpl.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Прикол)</title>
+    <title>Киберпословицы блин)</title>
     <link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
     <style>
@@ -22,6 +22,9 @@
         .wrapper {
             max-width: 480px;
             margin: 0 auto;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
         }
     </style>
 </head>
@@ -29,16 +32,25 @@
 <div class="wrapper">
     <h1 class="pre">Мудрая мысль на сегодня...</h1>
     <h2 id="msg" class="msg">{{ msg }}...</h2>
+    <a data-size="large" href="https://twitter.com/intent/tweet?text={{ msg }}&via=exp_fld" class="twitter-share-button" data-show-count="false">Блин, глубоко...</a>
 </div>
+<!-- Yandex.Metrika counter -->
+<script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+<script type="text/javascript" >
+   (function(m,e,t,r,i,k,a){m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)};
+   m[i].l=1*new Date();k=e.createElement(t),a=e.getElementsByTagName(t)[0],k.async=1,k.src=r,a.parentNode.insertBefore(k,a)})
+   (window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym");
+
+   ym(52705240, "init", {
+        clickmap:true,
+        trackLinks:true,
+        accurateTrackBounce:true
+   });
+</script>
+<noscript><div><img src="https://mc.yandex.ru/watch/52705240" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
+<!-- /Yandex.Metrika counter -->
 </body>
 <script defer>
-    let msgContainer = document.getElementById('msg');
-    setInterval(() => {
-        fetch('/msg')
-            .then(r => r.text())
-            .then(text => {
-                msgContainer.innerText = text
-            });
-    }, 3000);
+
 </script>
 </html>
