--- a/templates/tpl.html
+++ b/templates/tpl.html
@@ -26,31 +26,103 @@
             flex-direction: column;
             align-items: center;
         }
+
+        .btn {
+            border-radius: 0;
+            margin-bottom: 20px;
+            border: 0;
+            outline: 0;
+            padding: 10px 23px;
+            background: #4CAF50;
+            color: #ffffff;
+            cursor: pointer;
+            transition: all 0.2s ease-in-out;
+        }
+
+        .btn.disabled {
+            pointer-events: none;
+            opacity: 0.7;
+        }
+
+        .btn:hover {
+            background: #459649;
+        }
+
+        .twitter-button {
+            height: 28px;
+            border-radius: 4px;
+            padding: 1px 10px 1px 9px;
+            position: relative;
+            box-sizing: border-box;
+            background-color: #1b95e0;
+            color: #fff;
+            font-weight: 500;
+            cursor: pointer;
+            text-decoration: none;
+        }
+
+        .twitter-button i {
+            top: 4px;
+            height: 18px;
+            width: 18px;
+            position: relative;
+            display: inline-block;
+            background: transparent 0 0 no-repeat;
+            background-image: url(data:image/svg+xml,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20viewBox%3D%220%200%2072%2072%22%3E%3Cpath%20fill%3D%22none%22%20d%3D%22M0%200h72v72H0z%22%2F%3E%3Cpath%20class%3D%22icon%22%20fill%3D%22%23fff%22%20d%3D%22M68.812%2015.14c-2.348%201.04-4.87%201.744-7.52%202.06%202.704-1.62%204.78-4.186%205.757-7.243-2.53%201.5-5.33%202.592-8.314%203.176C56.35%2010.59%2052.948%209%2049.182%209c-7.23%200-13.092%205.86-13.092%2013.093%200%201.026.118%202.02.338%202.98C25.543%2024.527%2015.9%2019.318%209.44%2011.396c-1.125%201.936-1.77%204.184-1.77%206.58%200%204.543%202.312%208.552%205.824%2010.9-2.146-.07-4.165-.658-5.93-1.64-.002.056-.002.11-.002.163%200%206.345%204.513%2011.638%2010.504%2012.84-1.1.298-2.256.457-3.45.457-.845%200-1.666-.078-2.464-.23%201.667%205.2%206.5%208.985%2012.23%209.09-4.482%203.51-10.13%205.605-16.26%205.605-1.055%200-2.096-.06-3.122-.184%205.794%203.717%2012.676%205.882%2020.067%205.882%2024.083%200%2037.25-19.95%2037.25-37.25%200-.565-.013-1.133-.038-1.693%202.558-1.847%204.778-4.15%206.532-6.774z%22%2F%3E%3C%2Fsvg%3E);
+        }
     </style>
 </head>
 <body>
 <div class="wrapper">
     <h1 class="pre">Мудрая мысль на сегодня...</h1>
     <h2 id="msg" class="msg">{{ msg }}...</h2>
-    <a data-size="large" href="https://twitter.com/intent/tweet?text={{ msg }}&via=exp_fld" class="twitter-share-button" data-show-count="false">Блин, глубоко...</a>
+    <button class="btn" id="more">Ещё</button>
+    <a class="twitter-button"
+       href="https://twitter.com/intent/tweet?text={{ msg }}&via=exp_fld&url=https://poslovicy.herokuapp.com/"
+       target="_blank">
+        <i></i> Блин,
+        глубоко... </a>
 </div>
 <!-- Yandex.Metrika counter -->
 <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-<script type="text/javascript" >
-   (function(m,e,t,r,i,k,a){m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)};
-   m[i].l=1*new Date();k=e.createElement(t),a=e.getElementsByTagName(t)[0],k.async=1,k.src=r,a.parentNode.insertBefore(k,a)})
-   (window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym");
+<script type="text/javascript">
+    (function (m, e, t, r, i, k, a) {
+        m[i] = m[i] || function () {
+            (m[i].a = m[i].a || []).push(arguments)
+        };
+        m[i].l = 1 * new Date();
+        k = e.createElement(t), a = e.getElementsByTagName(t)[0], k.async = 1, k.src = r, a.parentNode.insertBefore(k, a)
+    })
+    (window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym");
 
-   ym(52705240, "init", {
-        clickmap:true,
-        trackLinks:true,
-        accurateTrackBounce:true
-   });
+    ym(52705240, "init", {
+        clickmap: true,
+        trackLinks: true,
+        accurateTrackBounce: true
+    });
 </script>
-<noscript><div><img src="https://mc.yandex.ru/watch/52705240" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
+<noscript>
+    <div><img src="https://mc.yandex.ru/watch/52705240" style="position:absolute; left:-9999px;" alt=""/></div>
+</noscript>
 <!-- /Yandex.Metrika counter -->
 </body>
 <script defer>
-
+    let moreButton = document.getElementById('more');
+    let msg = document.getElementById('msg');
+    let twitterButton = document.querySelector('.twitter-button');
+    moreButton.addEventListener('click', e => {
+        let target = e.currentTarget;
+        target.classList.add('disabled');
+        fetch('/msg')
+            .then(r => r.text())
+            .then(text => {
+                msg.innerText = text;
+                twitterButton.setAttribute('href', "https://twitter.com/intent/tweet?text=" + text + "&via=exp_fld&url=https://poslovicy.herokuapp.com/")
+                target.classList.remove('disabled');
+            })
+            .catch(e => {
+                target.classList.remove('disabled');
+            });
+    });
 </script>
 </html>
