--- a/templates/tpl.html
+++ b/templates/tpl.html
@@ -74,8 +74,8 @@
 </head>
 <body>
 <div class="wrapper">
-    <h1 class="pre">Поздравление на сегодня</h1>
-    <h2 id="msg" class="msg">{{ msg }}</h2>
+    <h1 class="pre">Мудрая мысль на сегодня...</h1>
+    <h2 id="msg" class="msg">{{ msg }}...</h2>
     <button class="btn" id="more">Ещё</button>
     <a class="twitter-button"
        href="https://twitter.com/intent/tweet?text={{ msg }}&via=exp_fld&url=https://poslovicy.herokuapp.com/"
@@ -116,7 +116,7 @@
         fetch('/msg')
             .then(r => r.text())
             .then(text => {
-                msg.innerText = text;
+                msg.innerText = text + '...';
                 twitterButton.setAttribute('href', "https://twitter.com/intent/tweet?text=" + text + "&via=exp_fld&url=https://poslovicy.herokuapp.com/")
                 target.classList.remove('disabled');
             })
